# Draco

./: .clang-format  .codecov.yml  .gitignore  .travis-install-dependencies.sh  .travis-run-tests.sh  .travis.yml  CMakeCache-example.txt  CMakeCache.txt  CMakeLists.txt  CTestConfig.cmake  CTestCustom.cmake  ChangeLog  Copyright  LICENSE  LICENSE.md  README.draco  README.junghans  README.md  ToDo  appveyor.yml  configure.ac  draco_config
autodoc/: CMakeLists.txt  README.autodoc  build_system.dcc.in  ci-testing.dcc  configure.ac  draco.dcc  draco_release_process.dcc  generate_mainpage_dcc.cmake  howtobuild.dcc  mainpage.dcc.in  software_development_policies.dcc  vendors.dcc
autodoc/html/: footer.html.in  header.html.in
config/: ApplicationUnitTest.cmake  CMakeAddFortranSubdirectory.cmake  CMakeCache-CT.txt  CMakeLists.txt  ChangeLog  CrayConfig.cmake  FindBLAS.cmake  FindCLAPACK.cmake  FindCOMPTON.cmake  FindDRACO.cmake  FindEOSPAC.cmake  FindGSL.cmake  FindGandolf.cmake  FindGrace.cmake  FindLAPACK.cmake  FindLIBSCI.cmake  FindMPI.cmake  FindNWA.cmake  FindPCG.cmake  FindRandom123.cmake  FindSuperLU_DIST.cmake  Makefile.autodoc.in  Makefile.dep.general  Makefile.dep.xlC  Makefile.dep.xlC.darwin  Makefile.doc.in  Makefile.head.in  Makefile.package.in  Makefile.src.in  Makefile.test.in  Toolchain-catamount.cmake  Toolchain-roadrunner-spu.cmake  Toolchain-roadrunner.cmake  UseLATEX.cmake  ac_compiler.m4  ac_conf.m4  ac_doxygen.m4  ac_draco_vendor.m4  ac_dracoarg.m4  ac_dracoenv.m4  (+57 more)
config/CMakeAddFortranSubdirectory/: build_cafs_proj.cmake.in  config_cafs_proj.cmake.in  config_mingw.cmake.in
config/cxx11/: CMakeLists.txt  CheckCXX11Features.cmake  README  c++11-test-array.cc  c++11-test-constexpr-N2235.cc  c++11-test-delegating_constructors-N1986.cc  c++11-test-explicit_conversion-N2437.cc  c++11-test-initializer_lists-N2672.cc  c++11-test-non_static_data_member_init-N2756.cc  c++11-test-range_based_for-N2930.cc  c++11-test-raw_string_literals-N2442.cc  c++11-test-shared_ptr.cc  c++11-test-type_traits-N1836.cc  c++11-test-unrestricted_unions-N2544.cc  demo.cc
config/doc/: FAQs.xml  adding_package_draco.xml  build_system.dcc  build_system_architecture.xml  code_access.xml  config_building_draco.xml  draco_build_ref_manual.xml  draco_build_system.xml  importing_draco_build_system.xml  release_access.xml
doc/: C4_Functions  CMakeLists.txt
doc/ExpEngineTraits/: UserVec.hh  UserVec.hh.cfg  UserVecTraits.hh  expTraits.cc  expTraits.cc.cfg  expTraits.hh
doc/MatrixFactory/: matFactory.tex
doc/acf90/: acf90.tex  makefile
doc/archive/: README.archive
doc/assessment/: Questionnaire.tex  profile.tex  questionnaire.cls
doc/autodoc/: Makefile  draco-autodoc.tex
doc/code_stats/: coverage.sxc
doc/cygwin/: Makefile  draco_cygwin.tex
doc/design/: Makefile  level.dot  project.charter
doc/draco-autodoc/: draco_autodoc.tex
doc/emacs/: Makefile  Test.cfg  Test.hh  draco-emacs.tex  emacs  tme-keys
doc/gettingStarted/: bashprofile  bashrc  gettingStarted.tex
doc/matprops/: CMakeLists.txt  Makefile  MultiMaterialCell.bib  MultiMaterialCell.tex
doc/merge/: draco_merge.out  merge-com.awk  run  srcdir-merge.out
doc/mesh/: CMakeLists.txt  Expression.tex  MTConcept.tex
doc/numdiff/: README  numdiff_f1  numdiff_f2  numdiff_f3  tstNumdiff
doc/purify/: 98099.tex  CMakeLists.txt  main.eps  p0.eps  p1.eps
doc/release/: AB.eps  AB.fig  CMakeLists.txt  Makefile  README  branch.eps  branch.fig  draco-release.tex  drelease.dot  drelease.eps  tag-strategy.eps  tag-strategy.fig
doc/releases/: CMakeLists.txt  Makefile  cov-5_0_0.tex  cov-6_0_0.tex  cov-6_2_0.tex  draco-3_0_0.tex  draco-3_2_0.tex  draco-4_0_0.tex  draco-5_0_0.tex  draco-5_20_0_release_email.txt  draco-6_0_0.tex  draco-6_2_0.tex  draco-6_2_0_release_email.txt  draco-6_3_0-email.txt  draco-6_4_0-email.txt  draco-6_5_0-email.txt  draco-6_6_0-email.txt  draco600-loc-history.ps  historical-loc.xlsx  level-3_0_0.ps  level-5_0_0.ps  level-6_0_0.ps  loc-3_0_0.eps  loc-3_2_0.eps  loc-4_0_0.eps  loc-5_0_0.eps
doc/reorganization_VisScope/: CMakeLists.txt  draco_reorg.tex
doc/system/: CMakeLists.txt  Makefile  checkout.eps  checkout.fig  cvsroot.eps  cvsroot.fig  doc.eps  doc.fig  jdir.eps  jdir.fig  milagro_co.eps  milagro_co.fig  milagro_cvs.eps  milagro_cvs.fig  rn98046.tex
src/: CMakeLists.txt  SConstruct  configure.ac  draco_subdirs.py
src/FortranChecks/: CMakeLists.txt  fc_derived_type.cc  sub1.f90
src/RTT_Format_Reader/: CMakeLists.txt  CellData.cc  CellData.hh  CellDataIDs.cc  CellDataIDs.hh  CellDefs.cc  CellDefs.hh  CellFlags.cc  CellFlags.hh  Cells.cc  Cells.hh  ChangeLog  Dims.cc  Dims.hh  Flags.cc  Flags.hh  Header.cc  Header.hh  NodeData.cc  NodeData.hh  NodeDataIDs.cc  NodeDataIDs.hh  NodeFlags.cc  NodeFlags.hh  Nodes.cc  Nodes.hh  RTT_Format_Reader.cc  RTT_Format_Reader.hh  RTT_Mesh_Reader.cc  RTT_Mesh_Reader.hh  Release.cc  Release.hh  SConstruct  SideData.cc  SideData.hh  SideDataIDs.cc  SideDataIDs.hh  SideFlags.cc  SideFlags.hh  Sides.cc  (+5 more)
src/VendorChecks/: CMakeLists.txt
src/c4/: ApplicationUnitTest.cc  ApplicationUnitTest.hh  C4_Datatype.hh  C4_Functions.hh  C4_MPI.cc  C4_MPI.hh  C4_MPI.i.hh  C4_MPI.t.hh  C4_MPI_async_pt.cc  C4_MPI_blocking_pt.cc  C4_MPI_free_inherited_comm.cc  C4_MPI_gather_scatter_pt.cc  C4_MPI_get_processor_name.cc  C4_MPI_reductions_pt.cc  C4_MPI_wait_any.cc  C4_Req.cc  C4_Req.hh  C4_Req_free.cc  C4_Serial.cc  C4_Serial.hh  C4_Serial.t.hh  C4_Status.cc  C4_Status.hh  C4_Tags.hh  C4_Traits.hh  C4_sys_times.h  CMakeLists.txt  ChangeLog  Compare.cc  Compare.hh  Functors.hh  Global_Timer.cc  Global_Timer.hh  NodeInfo.hh  (+59 more)
tools/: Makefile.in  apptest_modules.py  build_ccs4_release  check_coverage.in  check_for_tags.py  check_package_coverage.in  configure.ac  copy_test_to_bench.py  count_loc.sh  count_loc_f90.py  draco.in  find_tags.py  find_tags_diff.py  fixNames.py  format_commit.el  format_commit.sh  include_tree.py  launchtest.in  mpijob  numdiff.py  package_depends.py  partisn.py  profiler.py  regression_filter.py  test_filter.py  update_configure  update_release_tags.py
(+2529 files in other folders)
